--- a/server/package.json
+++ b/server/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node server.js",
+    "start": "ts-node --project tsconfig.json server.ts",
     "build": "tsc --watch"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.17.1",
     "mysql": "^2.18.1"
   },
