--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     ]
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.3.0",
+    "@reduxjs/toolkit": "^2.3.0",    
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -40,6 +40,8 @@
     "@types/node": "^22.8.5",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/lodash": "^4.17.13",
+    "@cowwoc/requirements": "^4.0.8",
     "typescript": "^4.4.2",
     "typescript-plugin-css-modules": "^5.1.0"
   }
