--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --coverage",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -24,24 +24,25 @@
     ]
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.3.0",    
+    "@reduxjs/toolkit": "^2.3.0",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.2",
     "react-redux": "^9.1.2",
     "react-scripts": "^5.0.1",
     "sass": "^1.80.5"
   },
   "devDependencies": {
+    "@cowwoc/requirements": "^4.0.8",
     "@testing-library/jest-dom": "^6.6.2",
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.14",
+    "@types/lodash": "^4.17.13",
     "@types/node": "^22.8.5",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "@types/lodash": "^4.17.13",
-    "@cowwoc/requirements": "^4.0.8",
     "typescript": "^4.4.2",
     "typescript-plugin-css-modules": "^5.1.0"
   }
